variables.Variables.scala.error
Compilation error:
Variables:2: error: Non-zero integral values may not have a leading zero.
var stepamount:int = 01 
                     ^Variables:2: error: illegal start of simple expression
var stepamount:int = 01 
                     ^