variables.Variables.scala.code

var stepamount:int = 01 

while (!isOverBaggle())
{forward(); step}